# InnoTasks

./: .gitignore  LICENSE  README.md  data.db  database.py  db.py  login.py  main.py  pyproject.toml  users.db
.github/workflows/: bandit.yaml  coverage.yaml  main.yaml  python_ci.yaml  python_lint.yaml
api/: main.py
backups/: backup_2024-04-28_18-48-20.sqlite
database/: db.py  settings.py
innotasks/: main.py
pages/: createtasks.py  edittasks.py  seetasks.py  todolist.py
repository/: repository.py
tests/: data.db  test_database.py
tests/e2e/: test_api.py
tests/integration/: test_innotasks.py
tests/performance/: locustfile.py
tests/unit/: test_api.py  test_database.py
