[tool.poetry]
name = "innotasks"
version = "0.1.0"
description = ""
authors = ["Anna Kopeikina <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
passlib = "^1.7.4"
streamlit = "^1.33.0"
plotly = "^5.21.0"
uvicorn = "^0.29.0"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.0"
bandit = "^1.7.8"
poetry-dotenv-plugin = "^0.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
locust = "^2.26.0"
flake8 = "^7.0.0"

[virtualenvs]
create = true
in-project = true


[package]
packages = [
    { include = "innotasks", from = "." },
    { include = "api", from = "." },
    { include = "database", from = "." },
    { include = "frontend", from = "."},
    { include = "repository", from = "."},
    { include = "unit_tests", from = "./tests/unit"},
    { include = "e2e_tests", from = "./tests/e2e"}
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
